tests/semantics/invalid/bad_id_usage.s23
int a = 0;

code a {}